--- a/AtsMOS_workflow.ipynb
+++ b/AtsMOS_workflow.ipynb
@@ -21,6 +21,10 @@
     "Workflow of the primary AtsMOS model stages\n",
     "\n",
     "\n",
+    "<div>\n",
+    "<img src=\"./figure_flow.png\" width=\"650\"/>\n",
+    "</div>\n",
+    "\n",
     "Stages to this code file:\n",
     "\n",
     "\n",
@@ -124,180 +128,10 @@
    "source": [
     "#Step 2: Set up necessary functions\n",
     "\n",
+    "#Note: ctrl-f the name of the function to see the different parts of the code they are used in. \n",
+    "#A number of these functions are used throughout different sections, thus the collection here at the start.\n",
+    "\n",
     "########## MDF test functions\n",
-    "def my_process_function(df):\n",
-    "    # some processing to create necessary variables, your processing will *possibly* be more extensive\n",
-    "    df['new_var_avg'] = (df['my_var_name1']+df['my_var_name2'])/2.0\n",
-    "    return df \n",
-    "\n",
-    "# will find and open a list of sequential netcdf data files and concat them into one data frame\n",
-    "def get_netcdf_data():\n",
-    "\n",
-    "    data_dir = './fake_data/'\n",
-    "\n",
-    "    if not os.path.exists(data_dir):\n",
-    "        os.makedirs(data_dir)\n",
-    "\n",
-    "    data_list = []\n",
-    "    for (root, subs, files) in os.walk(data_dir):\n",
-    "        for name in files:\n",
-    "            if name.endswith('.nc'):\n",
-    "                # selects some random ~3% of data so we run quickly and dont wait forever\n",
-    "                if modnar.randint(2) and modnar.randint(2) and modnar.randint(2):# and modnar.randint(2) and modnar.randint(2): #\n",
-    "                    data_list.append(root+name)\n",
-    "\n",
-    "    \n",
-    "    df = df_from_ncfiles(data_list, verbose=True) # implemented as a helper function in the modf class\n",
-    "    return df\n",
-    "\n",
-    "def create_fake_netcdf(start_date, end_date):\n",
-    "\n",
-    "    data_dir = './fake_data/'\n",
-    "\n",
-    "    var_list = ['var_thats_not_used','my_var_name1','my_var_name2','my_var_name3','my_var_name4','my_var_name5','my_var_name6','my_var_name7','my_var_name8','my_var_name9','my_var_name10','my_var_name11','my_var_name12','my_var_name13','my_var_name14','my_var_name15','my_var_name16','my_var_name17','my_var_name18','my_var_name19','my_var_name20','my_var_name21','my_var_name22','my_var_name23','my_var_name24','my_var_name25','my_var_name26','my_var_name27','my_var_name28','my_var_name29','my_var_name30','my_var_name31','my_var_name32','my_var_name33','my_var_name34','my_var_name35','my_var_name36','my_var_name37','my_var_name38','my_var_name39','my_var_name40','my_var_name41','my_var_name42','my_var_name43','my_var_name44','my_var_name45','my_var_name46','my_var_name47','my_var_name48','my_var_name49','my_var_name50','my_var_name51','my_var_name52','my_var_name53','my_var_name54','my_var_name55','my_var_name56','my_var_name57','my_var_name58','my_var_name59','my_var_name60','my_var_name61','my_var_name62','my_var_name63','my_var_name64','my_var_name65','my_var_name66','my_var_name67','my_var_name68','my_var_name69','my_var_name70','my_var_name71','my_var_name72','my_var_name73','my_var_name74','my_var_name75','my_var_name76','my_var_name77','my_var_name78','my_var_name79','my_var_name80','my_var_name81','my_var_name82','my_var_name83','my_var_name84','my_var_name85','my_var_name86','my_var_name87','my_var_name88','my_var_name89','my_var_name90','my_var_name91','my_var_name92','my_var_name93','my_var_name94','my_var_name95','my_var_name96','my_var_name97','my_var_name98']\n",
-    "\n",
-    "    fill_val = netCDF4.default_fillvals['f8']\n",
-    "\n",
-    "    var_att_dict = {}\n",
-    "    for var in var_list :\n",
-    "        var_att_dict[var] = {'units' : 'random'}\n",
-    "\n",
-    "    global_atts = {\n",
-    "        \"title\"                    : \"THIS FILE CONTAINS RANDOMLY GENERATED FAKE DATA TO TEST MDF CODE\",\n",
-    "        \"time_coverage_start\"      : \"{}\".format(start_date),\n",
-    "        \"keywords\"                 : \"surface energy budget, arctic, polar\",\n",
-    "    }\n",
-    "    day_delta = pd.to_timedelta(86399999999,unit='us') # we want to go up to but not including 00:00\n",
-    "    dates     = pd.date_range(start_date, end_date, freq='D')\n",
-    "    for today in dates:\n",
-    "        if today.day == 1 or today.day == 15: print(\"... creating data for day {}\".format(today))\n",
-    "        tomorrow = today+day_delta\n",
-    "        global_atts.update({\"time_coverage_end\": \"{}\".format(today+dt.timedelta(1))})\n",
-    "\n",
-    "        fake_data_index = pd.date_range(today, tomorrow, freq='30T') # create fake observations every 10 minutes\n",
-    "        fdi = fake_data_index                                        # some shorthand names\n",
-    "        bot = np.datetime64(start_date)                              # create array 'since beginning of time', to index netcdf files\n",
-    "\n",
-    "        file_str = '{}/fake_date_{}.nc'.format(data_dir,today.strftime('%Y%m%d'))\n",
-    "        ncdf     = netCDF4.Dataset(file_str, 'w')\n",
-    "\n",
-    "        for att_name, att_val in global_atts.items(): # write global attributes \n",
-    "            ncdf.setncattr(att_name, att_val)\n",
-    "\n",
-    "        # unlimited dimension to show that time is split over multiple files (makes dealing with data easier)\n",
-    "        ncdf.createDimension('time', None)\n",
-    "\n",
-    "        time_atts   = {'units'     : 'seconds since {}'.format(bot),\n",
-    "                       'delta_t'   : '0000-00-00 30:00:00',\n",
-    "                       'long_name' : 'seconds since the first day of observations',\n",
-    "                       'calendar'  : 'standard',}\n",
-    "\n",
-    "\n",
-    "        # create the arrays that are integer intervals expected by netcdf \n",
-    "        delta_ints = np.floor((fdi - bot).total_seconds()) # seconds\n",
-    "        time_inds  = pd.Int64Index(delta_ints)\n",
-    "\n",
-    "        nvals = len(time_inds)\n",
-    "\n",
-    "        # set the time dimension and variable attributes to what's defined above\n",
-    "        t    = ncdf.createVariable('time', 'int32','time') # seconds since\n",
-    "        t[:] = time_inds.values\n",
-    "        for att_name, att_val in time_atts.items(): ncdf['time'].setncattr(att_name,att_val)\n",
-    "\n",
-    "        # set variable attributes from above and generate data\n",
-    "        for var_name, var_atts in var_att_dict.items():\n",
-    "\n",
-    "            var = ncdf.createVariable(var_name, np.float32, 'time')\n",
-    "\n",
-    "            for att_name, att_desc in var_atts.items(): ncdf[var_name].setncattr(att_name, att_desc)\n",
-    "\n",
-    "            random_random_function, random_random_function_args = get_random_random_function_function()\n",
-    "            random_random_function_args['size'] = nvals\n",
-    "            rand_data = pd.DataFrame(random_random_function(**random_random_function_args))\n",
-    "\n",
-    "            max_val = np.nanmax(rand_data.values) # masked array max/min/etc\n",
-    "            min_val = np.nanmin(rand_data.values)\n",
-    "            avg_val = np.nanmean(rand_data.values)\n",
-    "\n",
-    "            ncdf[var_name].setncattr('max_val', max_val)\n",
-    "            ncdf[var_name].setncattr('min_val', min_val)\n",
-    "            ncdf[var_name].setncattr('avg_val', avg_val)\n",
-    "\n",
-    "            n_to_make_missing = modnar.randint(nvals)\n",
-    "            kill_these_vals = modnar.randint(nvals, size=n_to_make_missing)\n",
-    "\n",
-    "            rand_data.loc[kill_these_vals] = np.nan\n",
-    "            rand_data.fillna(fill_val, inplace=True)\n",
-    "\n",
-    "            var[:] = rand_data.values\n",
-    "\n",
-    "            # write atts to the var now\n",
-    "            for att_name, att_desc in var_atts.items(): ncdf[var_name].setncattr(att_name, att_desc)\n",
-    "            ncdf[var_name].setncattr('missing_value', fill_val)\n",
-    "\n",
-    "            # add a percent_missing attribute to give a first look at \"data quality\"\n",
-    "            perc_miss = perc_missing(rand_data.values)\n",
-    "            ncdf[var_name].setncattr('percent_missing', perc_miss)\n",
-    "\n",
-    "        ncdf.close() # close and write files for today\n",
-    "\n",
-    "def get_random_random_function_function(): # says what it does, does what it says\n",
-    "\n",
-    "    rg = modnar.Generator(modnar.PCG64())\n",
-    "\n",
-    "    # 9 random number generators\n",
-    "    rand_funcs = (rg.beta, rg.chisquare, rg.binomial, rg.f,\n",
-    "                  rg.gamma, rg.laplace, rg.pareto, rg.uniform, rg.weibull)\n",
-    "\n",
-    "    n_modnar_funcs = 9\n",
-    "\n",
-    "    low  = np.abs(random_reasonable_float())\n",
-    "    high = np.abs(random_reasonable_float())\n",
-    "    if low > high: new_high=low; low=high; high=new_high;\n",
-    "        \n",
-    "    func_args  = ({'a': np.abs(random_float()) , 'b': np.abs(random_float())},\n",
-    "                  {'df':modnar.randint(1,10),},\n",
-    "                  {'n':modnar.randint(1,modnar.randint(2,100)), 'p':modnar.random_sample()},\n",
-    "                  {'dfnum':modnar.randint(1,10), 'dfden':modnar.randint(1,10),},\n",
-    "                  {'shape': np.abs(200 * modnar.random_sample() - 100),'scale': np.abs(200 * modnar.random_sample() - 100)},\n",
-    "                  {'loc': random_reasonable_float(), 'scale': np.abs(random_reasonable_float())},\n",
-    "                  {'a': np.abs(random_reasonable_float())},\n",
-    "                  {'low': low, 'high': high},\n",
-    "                  {'a': np.abs(random_reasonable_float())},\n",
-    "                  )\n",
-    "\n",
-    "    func_number = modnar.randint(0, n_modnar_funcs)\n",
-    "    return (rand_funcs[func_number], func_args[func_number])\n",
-    "\n",
-    "def random_float():\n",
-    "    big_number = 1000000000000000\n",
-    "    return 2*big_number * modnar.random_sample() - big_number\n",
-    "\n",
-    "def random_reasonable_float():\n",
-    "    big_number = 10000\n",
-    "    return 2*big_number * modnar.random_sample() - big_number\n",
-    "\n",
-    "def perc_missing(series):\n",
-    "    if series.size == 0: return 100.0\n",
-    "    return np.round((np.count_nonzero(np.isnan(series))/float(series.size))*100.0, decimals=4)\n",
-    "\n",
-    "def ask_yn(question):\n",
-    "    valid  = {\"yes\": True, \"y\": True, \"ye\": True, \"no\": False, \"n\": False}\n",
-    "    while True:\n",
-    "        print(question)\n",
-    "        choice = input(\" ---> \").lower()\n",
-    "        if choice in valid:\n",
-    "            print(\"\")\n",
-    "            return valid[choice]\n",
-    "        else:\n",
-    "            print(\"Please respond with 'yes' or 'no' (or 'y' or 'n').\\n\\n\")\n",
-    "\n",
-    "def bytes_to_hr(byte_size): # humanreadable string\n",
-    "    power = 2**10\n",
-    "    n=0\n",
-    "    while byte_size > power: byte_size/=power; n+=1\n",
-    "    power_labels = {0:\"\", 1:\"kilo\", 2:\"mega\", 3:\"giga\", 4:\"tera\"}\n",
-    "    return \"{} {}bytes\".format(round(byte_size,4),power_labels[n])\n",
     "\n",
     "############ Miscellaneous processing functions\n",
     "######## Define some necessary functions\n",
@@ -3266,13 +3100,6 @@
     "    \"keywords\"                 : \"Everest, wind speed, model output statistics\",\n",
     "}\n",
     "example_MDF.update_global_atts(global_atts)  \n",
-    "\n",
-    "# create_fake_netcdf(data_start_date, data_end_date)\n",
-    "\n",
-    "# my_data_df   = get_netcdf_data()               # get your data into a dataframe somehow\n",
-    "# print(\"\\n\\n\"); print(my_data_df); print(\"\\n\\n\")\n",
-    "\n",
-    "# processed_df = my_process_function(my_data_df) # run the necessary data processing before writing MDF\n",
     "\n",
     "processed_df = pd.DataFrame({'co_w_con': co_w_con, 'co_p_con': co_p_con, 'co_t_con': co_t_con})\n",
     "processed_df=processed_df.set_index(timax)\n",
